--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <a href="#about" onclick="toggleMobileMenu()" class="text-gray-300 hover:text-accent hover:bg-black/10 block px-3 py-2 rounded-md text-base font-medium transition-colors">About</a>
                 <a href="#resume" onclick="toggleMobileMenu()" class="text-gray-300 hover:text-accent hover:bg-black/10 block px-3 py-2 rounded-md text-base font-medium transition-colors">Resume</a>
                 <a href="#projects" onclick="toggleMobileMenu()" class="text-gray-300 hover:text-accent hover:bg-black/10 block px-3 py-2 rounded-md text-base font-medium transition-colors">Projects</a>
-                <a href="#contact" onclick="toggleMobileMenu()" class="text-white bg-accent hover:bg-orange-600 block px-3 py-2 rounded-md text-base font-bold mt-4 text-center mx-3 shadow-lg">Contact Us</a>
+                <a href="#contact" onclick="toggleMobileMenu()" class="text-white bg-accent hover:bg-orange-600 block px-3 py-2 rounded-md text-base font-bold mt-4 text-center mx-3 shadow-lg">Contact</a>
             </div>
         </div>
     </nav>
@@ -200,7 +200,6 @@
                     <!-- Image Container -->
                     <div class="relative w-full h-full rounded-full border-4 border-white/10 bg-gradient-to-b from-white/5 to-transparent flex items-center justify-center overflow-hidden backdrop-blur-sm">
                          
-                         <!-- YOUR IMAGE IS HERE NOW -->
                          <!-- Ensure 'Passport 2.JPG' is in the same folder as this HTML file -->
                          <img src="Passport 2.JPG" alt="Esther Mukite Kituyi" class="w-full h-full object-cover rounded-full hover:scale-105 transition-transform duration-500">
                          
@@ -424,6 +423,14 @@
                                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
                             </div>
                             <span>Nairobi, Kenya</span>
+                        </div>
+                        <!-- LinkedIn -->
+                        <div class="flex items-center space-x-4 text-gray-300 hover:text-accent transition-colors">
+                            <div class="w-12 h-12 bg-secondary rounded-full flex items-center justify-center text-accent">
+                                <!-- LinkedIn Icon -->
+                                <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                            </div>
+                            <a href="https://www.linkedin.com/in/estherlaura-mukite-256880224/" target="_blank" class="hover:underline">LinkedIn Profile</a>
                         </div>
                     </div>
                 </div>
